# picar-x

./: .gitignore  .pan_servo).__name__ if s.pan_servo else None)  AGENT_INSTRUCTIONS.md  QUICKSTART.md  README.md  ROBOT_HAT_EXAMPLES.md  ROBOT_HAT_MIGRATION.md  pyproject.toml  requirements.txt  start.bat  start.sh
ansible/: README.md  inventory.ini  playbook.yml  requirements.yml  test-deployment.sh
ansible/group_vars/: picar.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: dhcpcd.conf.j2
ansible/roles/picar/handlers/: main.yml
ansible/roles/picar/tasks/: main.yml
ansible/roles/picar/templates/: config.py.j2  picar.service.j2
backend/: app.py  utils.py
config/: __init__.py  config.py
docs/: ARCHITECTURE.md  INDEX.md  RASPI_OS_SETUP.md  SETUP.md
frontend/static/: control.js  steering_calibration.js  style.css
frontend/templates/: index.html  steering_calibration.html
picar/: __init__.py
picar/camera/: __init__.py  camera_stream.py
picar/motors/: __init__.py  motor_controller.py
picar/servos/: __init__.py  servo_controller.py
picar/steering/: __init__.py  steering_controller.py
