[project]
name = "picar-x"
version = "1.0.0"
description = "Modular web-based control system for Sunfounder PiCar-X robot"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Private"}
authors = [{name = "PiCar Developer"}]

dependencies = [
    "flask==2.3.0",
    "flask-cors==4.0.0",
    "Werkzeug==2.3.0",
    "picamera2==0.3.9",
    "adafruit-pca9685==1.4.1",
    "RPi.GPIO==0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "black==23.7.0",
    "flake8==6.0.0",
    "mypy==1.4.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-version = "3.9"
